// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<tr>
  <td>
    cell 1
  </td>
  <td>
    cell 2
  </td>
  <td>
    cell 3
  </td>
</tr>
`;

exports[`renders correctly when clickable 1`] = `
<tr
  className="trClickable"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <td>
    cell 1
  </td>
  <td>
    cell 2
  </td>
  <td>
    cell 3
  </td>
</tr>
`;
